--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://thepeppershaker.github.io/CasselBlog/about/" />
 <meta property="og:site_name" content="Timothy Cassel" />
 <script type="application/ld+json">
-{"description":"Hopefully some interesting content","url":"https://thepeppershaker.github.io/CasselBlog/about/","@type":"WebSite","headline":"About Me","name":"Timothy Cassel","@context":"https://schema.org"}</script>
+{"url":"https://thepeppershaker.github.io/CasselBlog/about/","@type":"WebSite","headline":"About Me","name":"Timothy Cassel","description":"Hopefully some interesting content","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/CasselBlog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://thepeppershaker.github.io/CasselBlog/feed.xml" title="Timothy Cassel" /><link rel="shortcut icon" type="image/x-icon" href="/CasselBlog/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -77,7 +77,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/CasselBlog/about/">About Me</a></div>
+        <div class="trigger"><a class="page-link" href="/CasselBlog/archived_posts/2020-01-14-test-markdown-post.html">An Example Markdown Post</a><a class="page-link" href="/CasselBlog/archived_posts/2020-10-17-testing.html">Formatting test</a><a class="page-link" href="/CasselBlog/about/">About Me</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
