--- a/404.html
+++ b/404.html
@@ -77,7 +77,7 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/CasselBlog/archived_posts/2020-01-14-test-markdown-post.html">An Example Markdown Post</a><a class="page-link" href="/CasselBlog/archived_posts/2020-10-17-testing.html">Formatting test</a><a class="page-link" href="/CasselBlog/about/">About Me</a></div>
+        <div class="trigger"><a class="page-link" href="/CasselBlog/about/">About Me</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
