--- a/about/index.html
+++ b/about/index.html
@@ -117,7 +117,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/ThePepperShaker" title="ThePepperShaker"><svg class="svg-icon grey"><use xlink:href="/CasselBlog/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/timothy-cassel" title="timothy-cassel"><svg class="svg-icon grey"><use xlink:href="/CasselBlog/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/ThePepperShaker" title="ThePepperShaker"><svg class="svg-icon grey"><use xlink:href="/CasselBlog/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/timothy_cassel" title="timothy_cassel"><svg class="svg-icon grey"><use xlink:href="/CasselBlog/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
